Changes since v1.0.2:

- interface extension (Cezar Andrei)
- pre/post extension (Cezar Andrei)
- interface extension tests (Yana Kadiyska)
- pre/post extension tests (Yana Kadiyska)
- build xbean_xpath.jar by default (Cezar Andrei)
- fixed an NPE in the Validator (Cezar Andrei)
- perf improvement when using List.toArray() by passing in
    an array of right size (Kevin Krouse)
- fixed memory leak in CursorData (Cid Dennis/Kevin Krouse)